--- a/style.css
+++ b/style.css
@@ -713,6 +713,7 @@ footer {
         grid-template-columns: 1fr;
         gap: 1rem;
         text-align: center;
+        margin-top: 0;
     }
 
     .header__image-lg {
