--- a/style.css
+++ b/style.css
@@ -441,6 +441,7 @@ header {
     margin-top: 5rem;
     gap: 3rem;
     height: 50%;
+    overflow: scroll;
 }
 
 .exhibitions__gallery article {
@@ -472,7 +473,7 @@ header {
 }
 
 footer {
-    margin-top: 70rem;
+    margin-top: 5rem;
 }
 
 .footer__container {
@@ -685,10 +686,6 @@ footer {
         border: none;
     }
 
-    footer {
-        margin-top: 55rem;
-    }
-
     .footer__head {
         flex-direction: column;
     }
@@ -787,10 +784,6 @@ footer {
         width: 100%;
         height: fit-content;
         margin-bottom: 1rem;
-    }
-
-    footer {
-        margin-top: 150rem;
     }
 
     .footer__head {
